Ingress/ingress-test-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1-deployment
  labels:
    app: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx1
        image: rajithr007/nginx1-test:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2-deployment
  labels:
    app: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: rajithr007/nginx2-test:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx3-deployment
  labels:
    app: nginx3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx3
  template:
    metadata:
      labels:
        app: nginx3
    spec:
      containers:
      - name: nginx3
        image: rajithr007/nginx3-test:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx1-service
spec:
  type: NodePort
  selector:
    app: nginx1
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx2-service
spec:
  type: NodePort
  selector:
    app: nginx2
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx3-service
spec:
  type: NodePort
  selector:
    app: nginx3
  ports:
  - name: http
    protocol: TCP
    port: 8082
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1  
spec:
  ingressClassName: nginx
  rules:
  - host: host.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx1-service
            port:
              number: 8080      
      - path: /svc1
        pathType: Prefix
        backend:
          service:
            name: nginx1-service
            port:
              number: 8080
      - path: /svc2
        pathType: Prefix
        backend:
          service:
            name: nginx2-service
            port:
              number: 8081
      - path: /svc3
        pathType: Prefix
        backend:
          service:
            name: nginx3-service
            port:
              number: 8082
